Resizing fixed 🖼`overflow:hidden`

--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,18 @@
 :root {
     background-color: #333333;
 }
-
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
 body {
     padding: 0;
     margin: 0;
     color: white;
     font-family: "DM Mono", monospace;
 }
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
